[package]
name = "anchovy"
version = "0.3.0"
edition = "2024"
description = "Async Unix socket stream with file descriptor passing"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@matilde.pet>"]
documentation = "https://docs.rs/anchovy"
repository = "https://github.com/tailwags/anchovy"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
rustix = { version = "1.1.4", features = ["net"] }
tokio = { version = "1.52.1", features = ["net"] }
